Apply recipes of OpenRewrite for Java 17.